Tests/Conformance/Generated/Builtin/Constant/Data/DataMisMap.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Data.DataMisMap

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_data_dataMisMap "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/data/dataMisMap/dataMisMap.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Data.DataMisMap
